# durham-environmental-monitoring-old

./: .dockerignore  .gitignore  .gitmessage  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  DATA_MANAGEMENT_README.md  DOTTED_LINES_IMPLEMENTATION.md  Dockerfile  FINAL_PROJECT_STATUS.md  FINAL_SYSTEM_STATUS_REPORT.md  GOOGLE_DRIVE_TEST_SENSOR_INTEGRATION.md  IMPLEMENTATION_REPORT.md  MULTI_SENSOR_VISUALIZATION_COMPLETE.md  Makefile  NEW_FEATURES_DOCUMENTATION.md  PRODUCTION_PDF_SYSTEM_COMPLETE.md  PROJECT_SUMMARY_Jul1.md  PYTHON_SETUP_GUIDE.md  QUICK_START.md  README.md  README_updated.md  README_updated_with_env_instructions.md  REORGANIZATION_COMPLETE.md  SCRIPT_PATH_VALIDATION_COMPLETE.md  SYSTEM_COMPLETE.md  SYSTEM_VERIFICATION_COMPLETE.md  TEST_SENSOR_IMPLEMENTATION_GUIDE.md  WU_DATA_FIX_PROJECT_COMPLETE.md  advice-for-change-toBigQuery.md  analysis_summary.py  automated_maintenance.sh  automation_commands.sh  cleanup_analysis_20250701_035011.json  cleanup_project.sh  cleanup_safe_files.sh  cloudbuild-cr-job.yaml  cloudbuild.multi.yaml  com.hotdurham.maintenance.plist  combined_wu_tsi_to_sheets.py  combined_wu_tsi_to_sheets_async_clean_final.py  (+77 more)
.devcontainer/: cloud-sql-setup.md  devcontainer.json  post-create.sh  start-cloud-sql-proxy.sh  supervisord.conf
.githooks/: pre-commit
.ipynb_checkpoints/: next_steps_guide-checkpoint.ipynb
archive/: reorganize_project.py
bigquery/: materialize_raw.sql  views.sql
config/: alert_manager_config.py  alert_system_config.json  automated_data_pull_config.py  daily_sheets_config.json  data_quality.yaml  high_resolution_data_config.json  improved_google_drive_config.py  master_data_config.json  metrics_manifest.json  prioritized_pull_config.json  production_pdf_config.json  public_api_config.json  pull_schedule_20250525_175827.json  pull_schedule_20250525_175913.json  pull_schedule_20250525_180203.json  pull_schedule_20250525_180332.json  pull_schedule_20250525_183044.json  pull_schedule_20250525_183629.json  pull_schedule_20250525_183850.json  pull_schedule_20250530_141653.json  pull_schedule_20250530_141815.json  pull_schedule_20250530_141918.json  pull_schedule_20250530_141928.json  test_sensor_scheduler_config.json  test_sensors_config.py  tsi_stations_config.py
creds/: .gitignore  README.md
dashboard/: google_drive_sync_status.html
data/: README.md
database/: schema.sql
docs/: AUTOMATED_PIPELINE_OVERVIEW.md  BACKFILL_SUMMARY_2025-10-02.md  CLEANUP_SUMMARY.md  FEATURE2_IMPLEMENTATION_COMPLETE.md  IAM_HARDENING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  LOCAL_DEVELOPMENT.md  Metric-Diagnostics.md  Monitoring-Alerts.md  NEW_FEATURES_DOCUMENTATION.md  PORT_MANAGEMENT_SYSTEM.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY_Jul1.md  QUICK_START.md  README.md  SYSTEM_ARCHITECTURE.md  TSI-Data-Quality-Monitoring.md  diagram.md
hot_durham_project/: README.md  pyproject.toml
logs/: automation_log_202505.json
oldPulls/: old_wu_datapull.py  oldtsi_datapull.py  tsi_to_google_sheets.py
processed_old/: .gitignore
production/: feature2_production_config.json  feature2_production_monitor.py  feature2_production_service.py
(+444 files in other folders)
