[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tsi-data-uploader"
version = "0.1.0"
description = "A service to collect and upload TSI and Weather Underground sensor data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.0",
    "SQLAlchemy>=2.0.41",
    "psycopg2-binary>=2.9.9",
    "google-cloud-secret-manager>=2.21.0",
    "google-cloud-storage>=2.18.2",
    "google-cloud-bigquery>=3.25.0",
    "python-dotenv>=1.1.1",
    "tqdm>=4.66.4",
    "nest-asyncio>=1.6.0",
    "google-cloud-logging>=3.10.0",
    "pydantic>=2.0.0",
    "pyarrow>=16.1.0",
    "PyYAML>=6.0.0",
    # Explicit protobuf range to satisfy both google-cloud-* (<7) and dbt-adapters (>=6,<7)
    "protobuf>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "flake8",
    "pip-tools",
    "ruff>=0.6.0",
    "jinja2",
    "pip-audit"
]

[project.scripts]
run-data-collection = "src.data_collection.daily_data_collector:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
