[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hot-durham"
version = "2.0.0"
description = "A web application to display sensor data on a map."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.3.0,<3.0.0",
    "protobuf>=6.31.1,<7.0.0",
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "gunicorn>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pip-tools",
]
